<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.newftms.addMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/newequipment_layout">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newequipment_name"
                    android:hint="@string/newequipment_supply_n_hint"/>

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newequipment_quantity"
                    android:hint="@string/newequipment_supply_q_hint"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newequipment_button"
                    android:layout_gravity="end"
                    android:focusable="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:onClick="addEquipment"
                    android:id="@+id/newequipment_button" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:background="#FFFFFF"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/newsupply_layout">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newsupply_name"
                    android:hint="@string/newequipment_supply_n_hint"/>

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newsupply_quantity"
                    android:hint="@string/newequipment_supply_q_hint"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newsupply_button"
                    android:layout_gravity="end"
                    android:onClick="addSupply"
                    android:id="@+id/newsupply_button" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <View
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:background="#FFFFFF"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/newstaff_layout">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newstaff_name"
                    android:hint="@string/newstaff_n_hint"/>

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newstaff_role"
                    android:hint="@string/newstaff_r_hint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="Please go to the schedule menu to insert schedule information."/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newstaff_button"
                    android:layout_gravity="end"
                    android:onClick="addStaff"
                    android:id="@+id/newstaff_button" />


            </LinearLayout>

            <View
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:background="#FFFFFF"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/newmenu_layout">

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/newmenuitem_name"
                    android:hint="@string/newmenuitem_hint"/>


                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/menuitem_list" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newmenuitem_button"
                    android:layout_gravity="end"
                    android:onClick="addMenuItem"
                    android:id="@+id/newmenuitem_button" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
