<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_schedule_menu"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="ca.mcgill.ecse321.newftms.scheduleMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:text="Choose Staff"
                android:id="@+id/choose_staff_label" />

            <Spinner
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:id="@+id/staff_spinner" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:id="@+id/dotw_spinner" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/staff_role_text"/>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Click on times to modify"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/schedule_starttime_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/schedule_starttime_display"
                    android:onClick="showTimePickerDialog"/> <!--android:text="@string/schedule_start_initial"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/schedule_endtime_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/schedule_endtime_display"
                    android:onClick="showTimePickerDialog"/> <!--android:text="@string/schedule_end_initial"-->
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <Button
                android:text="@string/update_schedule_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:onClick="updateSchedule"
                android:id="@+id/update_schedule_button"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
